# mdserve

./: NIX_GUIDE.md  README.md  flake.nix  pyproject.toml
src/mdserve/: __init__.py  __main__.py  server.py
