[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdserve"
version = "1.0.0"
description = "A beautiful local file server with Markdown rendering"
requires-python = ">=3.9"
dependencies = [
    "markdown>=3.5",
    "pygments>=2.17",
]

[project.scripts]
mdserve = "mdserve.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mdserve"]
